crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_struct_with_multi_key_id_sorting.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
assertion_line: 148
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports)]

use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

/// Generated by `zerodds-idl-rust` from IDL.
#[derive(Debug, Clone, PartialEq, Default)]
pub struct Composite {
    pub b: i32,
    pub a: i32,
    pub payload: String,
}

impl zerodds_dcps::DdsType for Composite {
    const TYPE_NAME: &'static str = "Composite";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Final;
    const HAS_KEY: bool = true;
    const KEY_HOLDER_MAX_SIZE: ::core::option::Option<usize> = ::core::option::Option::Some(8);
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0x28, 0x94, 0xbb, 0xd4, 0xa5, 0x9b, 0xb4, 0x8d, 0xfc, 0xed, 0x0a, 0x96, 0x84, 0x9b]));

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
        <_ as zerodds_cdr::CdrEncode>::encode(&self.b, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.a, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.payload, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
        let b = <i32 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let a = <i32 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let payload = <String as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        Ok(Self {
            b,
            a,
            payload,
        })
    }

    fn encode_key_holder_be(&self, holder: &mut zerodds_cdr::PlainCdr2BeKeyHolder) {
        holder.write_i32(self.a);
        holder.write_i32(self.b);
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_sql_filter::Value> {
        match path {
            "b" => ::core::option::Option::Some(zerodds_sql_filter::Value::Int(self.b as i64)),
            "a" => ::core::option::Option::Some(zerodds_sql_filter::Value::Int(self.a as i64)),
            "payload" => ::core::option::Option::Some(zerodds_sql_filter::Value::String(self.payload.clone())),
            _ => ::core::option::Option::None,
        }
    }
}
