crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_struct_with_rust_reserved_word_identifiers.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports)]
#![allow(non_snake_case)]

use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

/// Generated by `zerodds-idl-rust` from IDL.
#[derive(Debug, Clone, PartialEq, Default)]
pub struct r#match {
    pub r#type: i32,
    pub r#mod: i32,
    pub r#fn: i32,
}

impl zerodds_dcps::DdsType for r#match {
    const TYPE_NAME: &'static str = "match";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Appendable;
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0x5a, 0xf3, 0x9a, 0x71, 0x03, 0x50, 0x24, 0x0b, 0xba, 0x01, 0x4f, 0x13, 0x20, 0xbf]));

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.r#type, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.r#mod, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.r#fn, w)?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn encode_be(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Big).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.r#type, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.r#mod, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.r#fn, w)?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            let r#type = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
            let r#mod = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
            let r#fn = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
            Ok(Self {
                r#type,
                r#mod,
                r#fn,
            })
        }).map_err(::core::convert::Into::into)
    }

    fn decode_be(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Big).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            let r#type = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
            let r#mod = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
            let r#fn = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
            Ok(Self {
                r#type,
                r#mod,
                r#fn,
            })
        }).map_err(::core::convert::Into::into)
    }

    fn encode_xcdr1(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrEncode>::encode(self, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode_xcdr1(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrDecode>::decode(&mut reader).map_err(::core::convert::Into::into)
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_dcps::FilterValue> {
        match path {
            "r#type" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Int(self.r#type as i64)),
            "r#mod" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Int(self.r#mod as i64)),
            "r#fn" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Int(self.r#fn as i64)),
            _ => ::core::option::Option::None,
        }
    }
}

impl zerodds_cdr::CdrEncode for r#match {
    fn encode(&self, writer: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        if writer.max_alignment() == 4 {
            zerodds_cdr::struct_enc::encode_appendable(writer, |w| {
                <_ as zerodds_cdr::CdrEncode>::encode(&self.r#type, w)?;
                <_ as zerodds_cdr::CdrEncode>::encode(&self.r#mod, w)?;
                <_ as zerodds_cdr::CdrEncode>::encode(&self.r#fn, w)?;
                Ok(())
            })?;
        } else {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.r#type, writer)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.r#mod, writer)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.r#fn, writer)?;
        }
        ::core::result::Result::Ok(())
    }
}

impl zerodds_cdr::CdrDecode for r#match {
    fn decode(reader: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        if reader.max_alignment() == 4 {
            zerodds_cdr::struct_enc::decode_appendable(reader, |r| {
                let r#type = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
                let r#mod = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
                let r#fn = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
                ::core::result::Result::Ok(Self {
                    r#type,
                    r#mod,
                    r#fn,
                })
            })
        } else {
            let r#type = <i32 as zerodds_cdr::CdrDecode>::decode(reader)?;
            let r#mod = <i32 as zerodds_cdr::CdrDecode>::decode(reader)?;
            let r#fn = <i32 as zerodds_cdr::CdrDecode>::decode(reader)?;
            ::core::result::Result::Ok(Self {
                r#type,
                r#mod,
                r#fn,
            })
        }
    }
}
