crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_struct_with_single_key.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports)]

use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

/// Generated by `zerodds-idl-rust` from IDL.
#[derive(Debug, Clone, PartialEq, Default)]
pub struct Reading {
    pub sensor_id: i32,
    pub value: f64,
}

impl zerodds_dcps::DdsType for Reading {
    const TYPE_NAME: &'static str = "Reading";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Final;
    const HAS_KEY: bool = true;
    const KEY_HOLDER_MAX_SIZE: ::core::option::Option<usize> = ::core::option::Option::Some(4);
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0x6d, 0x77, 0xaa, 0x13, 0xf8, 0x73, 0xe3, 0x82, 0xc3, 0xe6, 0x2e, 0x65, 0x46, 0x16]));

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little).xcdr2();
        <_ as zerodds_cdr::CdrEncode>::encode(&self.sensor_id, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.value, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little).xcdr2();
        let sensor_id = <i32 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let value = <f64 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        Ok(Self {
            sensor_id,
            value,
        })
    }

    fn encode_key_holder_be(&self, holder: &mut zerodds_cdr::PlainCdr2BeKeyHolder) {
        holder.write_i32(self.sensor_id);
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_sql_filter::Value> {
        match path {
            "sensor_id" => ::core::option::Option::Some(zerodds_sql_filter::Value::Int(self.sensor_id as i64)),
            "value" => ::core::option::Option::Some(zerodds_sql_filter::Value::Float(self.value)),
            _ => ::core::option::Option::None,
        }
    }
}

impl zerodds_cdr::CdrEncode for Reading {
    fn encode(&self, writer: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        <_ as zerodds_cdr::CdrEncode>::encode(&self.sensor_id, writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.value, writer)?;
        ::core::result::Result::Ok(())
    }
}

impl zerodds_cdr::CdrDecode for Reading {
    fn decode(reader: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        let sensor_id = <i32 as zerodds_cdr::CdrDecode>::decode(reader)?;
        let value = <f64 as zerodds_cdr::CdrDecode>::decode(reader)?;
        ::core::result::Result::Ok(Self {
            sensor_id,
            value,
        })
    }
}
