crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_struct_with_string_and_sequence.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
assertion_line: 115
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports)]

use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

/// Generated by `zerodds-idl-rust` from IDL.
#[derive(Debug, Clone, PartialEq, Default)]
pub struct Message {
    pub topic: String,
    pub values: Vec<i32>,
}

impl zerodds_dcps::DdsType for Message {
    const TYPE_NAME: &'static str = "Message";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Final;
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::None;

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
        <_ as zerodds_cdr::CdrEncode>::encode(&self.topic, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.values, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
        let topic = <String as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let values = <Vec<i32> as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        Ok(Self {
            topic,
            values,
        })
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_sql_filter::Value> {
        match path {
            "topic" => ::core::option::Option::Some(zerodds_sql_filter::Value::String(self.topic.clone())),
            _ => ::core::option::Option::None,
        }
    }
}
