crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_typedef.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

pub type Distance = i32;
pub type Coord = [i32; 3];
